Changes made to title and font link

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>WDD 231 - Web Frontend Development Homepage</title>
     <meta name="description" content="Emmanuel Odedina - WDD 231 - Web Frontend Development Home Page | Showcasing dynamic web development skills and coursework projects. Learn more about my journey in HTML, CSS, and responsive design.">
     <meta name="author" content="Emmanuel Odedina">
 
     <!-- Fonts and Styles -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
