facebook social media tag added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <meta name="description" content="Emmanuel Odedina - WDD 231 - Web Frontend Development Home Page | Showcasing dynamic web development skills and coursework projects. Learn more about my journey in HTML, CSS, and responsive design.">
     <meta name="author" content="Emmanuel Odedina">
 
+    <!-- Social Media Meta Tags -->
+    <meta property="og:title" content="WDD 231 - Web Frontend Development Homepage">
+    <meta property="og:description" content="This homepage introduces Emmanuel Odedina, a UX designer and web development student. It showcases course progress, project links, and responsive design skills using HTML, CSS, and JavaScript.">
+    <meta property="og:image" content="https://emmanuel-adewunmi.github.io/wdd231/images/og-image.jpg
+">
+    <meta property="og:locale" content="https://emmanuel-adewunmi.github.io/wdd231/
+">
+
+
     <!-- Fonts and Styles -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
