--- a/prophets.html
+++ b/prophets.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Emmanuel Odedina">
 
     <link rel="stylesheet" href="styles/prophets.css">
+    <link rel="icon" href="images/favicon.ico">
     <script src="scripts/prophets.js" defer></script>
 </head>
 <body>
