--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,52 +1,130 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lagos Chaamber of Commerce Homepage</title>
-    <meta property="og:title" content="Lagos Chamber of Commerce Homepage">
-    <meta property="og:description" content="This page introduces top local businesses in Lagos">
-    <meta property="og:image" content="https://emmanuel-adewunmi.github.io/wdd231/chamber/images/og-image.jpg">
-    <meta property="og:locale" content="https://emmanuel-adewunmi.github.io/wdd231/chamber/directory.html">
-    <!-- Favicon, Fonts, Styles and Script -->
+    <meta name="description"
+        content="Lagos Chamber of Commerce - Empowering local businesses through networking, events, and business support.">
+    <meta name="author" content="Emmanuel Odedina">
+
+    <!-- Open Graph Meta -->
+    <meta property="og:title" content="Lagos Chamber of Commerce">
+    <meta property="og:description" content="Join the thriving network of Lagos businesses.">
+    <meta property="og:image" content="https://emmanuel-adewunmi.github.io/wdd231/chamber/images/og-image-home.webp">
+    <meta property="og:url" content="https://emmanuel-adewunmi.github.io/wdd231/chamber/index.html">
+
+    <title>Lagos Chamber of Commerce | Home</title>
+
+    <!-- Favicon, Fonts, Styles -->
     <link rel="icon" href="/images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="styles/larger.css">
-    <script src="scripts/base.js" defer></script>
-    <script src="scripts/date.js" defer></script>
-    <script src="scripts/navigation.js" defer></script>
+    <link rel="stylesheet" href="styles/larger.css" media="print" onload="this.media='all'">
+    <link rel="stylesheet" href="styles/home.css">
+
+    <script src="scripts/main.js" defer></script>
+    <script src="scripts/home.js" defer></script>
 </head>
+
 <body>
     <header>
-        <div class="logo">Lagos Chamber</div>
-        <nav>
-            <button id="menuBtn">&#9776;</button>
-            <ul id="primaryNav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="directory.html" class="active">Directory</a></li>
-                <li><a href="join.html">Join</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="header-container">
+            <a href="index.html" class="logo">Lagos Chamber</a>
+
+            <div class="nav-actions">
+                <button id="menu-toggle" aria-label="Toggle Navigation">&#9776;</button>
+                <nav id="nav">
+                    <a href="index.html" class="active">Home</a>
+                    <a href="directory.html">Directory</a>
+                    <a href="join.html">Join</a>
+                    <a href="discover.html">Discover</a>
+                </nav>
+                <button id="theme-toggle" aria-label="Toggle Light/Dark Mode">
+                    <span class="icon">🌙</span>
+                </button>
+            </div>
+        </div>
     </header>
 
     <main>
-        <se
-        <img src="images/hero-image.webp" alt="Hero image" width="" height=""
-        <button> id="call to action">Join the Chamber of Commerce</button>
+        <!-- Hero Section -->
+        <section class="hero">
+            <img src="images/hero.webp" alt="Central Business District, Lagos" loading="lazy">
+            <div class="hero-text">
+                <h1>Welcome to the Lagos Chamber of Commerce</h1>
+                <p>Connecting businesses, building communities.</p>
+            </div>
+        </section>
+
+        <!-- Call to Action -->
+        <section class="cta">
+            <h2 class="visually-hidden">Join the Chamber</h2>
+            <a href="join.html" class="cta-button">Join the Chamber Today</a>
+        </section>
+        <!-- Events + Weather Section -->
+        <section class="events-weather">
+            <h2>Events & Weather</h2>
+            <section class="events">
+                <h3>Current Events</h3>
+                <ul>
+                    <li><strong>Business Expo 2025</strong> – @ Landmark Event Centre</li>
+                    <li><strong>SME Networking Night</strong> –  @ Terra Kulture</li>
+                </ul>
+        </section>
+    
+        <section class="weather" id="weather">
+            <h3>Current Weather in Lagos</h3>
+            <p id="current-temp"></p>
+            <p id="current-description"></p>
+        </section>
+
+        <section class="forecast-section">
+            <h3>Weather Forecast</h3>
+            <div id="forecast"></div>
+        </section>
+
+    </section>
 
 
+        <!-- Spotlight Section -->
+        <section class="spotlights">
+            <h2>Member Spotlights</h2>
+            <div class="spotlight-container" id="spotlights"></div>
+        </section>
     </main>
 
     <footer>
-        <p>Contact: emladewunmi@gmail.com | +234 800 123 4567</p>
-        <p> &copy; <span id="year"></span> Lagos Chamber of Commerce | WDD 231 | Emmanuel Odedina | Last Modified: <span
-                id="lastModified"></span></p>
+        <div class="footer-container">
+            <div class="footer-left">
+                <p>Contact: eodedina@byupathway.edu<br>+234 000 000 0000</p>
+            </div>
+
+            <div class="footer-center">
+                <a href="https://www.youtube.com/@BYUPathwayWorldwideOfficial" target="_blank">
+                    <img src="images/youtube.svg" alt="YouTube" width="32" height="32">
+                </a>
+                <a href="https://www.linkedin.com/school/byupathway/" target="_blank">
+                    <img src="images/linkedin.svg" alt="LinkedIn" width="32" height="32">
+                </a>
+                <a href="https://x.com/BYUPathwayWorld" target="_blank">
+                    <img src="images/twitter-x.svg" alt="Twitter-x" width="32" height="32">
+                </a>
+            </div>
+
+            <div class="footer-right">
+                <p>&copy; <span id="year"></span> Lagos Chamber of Commerce<br>
+                    WDD 231 | Emmanuel Odedina<br>
+                    Last Modified: <span id="lastModified"></span></p>
+            </div>
+        </div>
     </footer>
-    
 </body>
+
 </html>
