Week 03 project fulfilled after minor edits

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -54,20 +54,21 @@
     </header>
 
     <main>
-        <!-- Hero Section -->
+        <!-- Hero Section + Call to Action -->
         <section class="hero">
             <img src="images/hero.webp" alt="Central Business District, Lagos" loading="lazy">
             <div class="hero-text">
                 <h1>Welcome to the Lagos Chamber of Commerce</h1>
                 <p>Connecting businesses, building communities.</p>
             </div>
+            <section class="cta">
+                <h2 class="visually-hidden">Join the Chamber</h2>
+                <a href="join.html" class="cta-button">Join the Chamber Today</a>
+            </section>
         </section>
 
-        <!-- Call to Action -->
-        <section class="cta">
-            <h2 class="visually-hidden">Join the Chamber</h2>
-            <a href="join.html" class="cta-button">Join the Chamber Today</a>
-        </section>
+        
+       
         <!-- Events + Weather Section -->
         <section class="events-weather">
             <h2>Events & Weather</h2>
