--- a/chamber/index.html
+++ b/chamber/index.html
@@ -15,7 +15,7 @@
 
     <title>Lagos Chamber of Commerce | Home</title>
 
-    <link rel="icon" href="chamber/images/favicon.ico">
+    <link rel="icon" href="/images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
