--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="https://emmanuel-adewunmi.github.io/wdd231/chamber/images/og-image.webp">
     <meta property="og:url" content="https://emmanuel-adewunmi.github.io/wdd231/chamber/directory.html">
     <title>Lagos Chamber of Commerce | Business Directory</title>
-    <link rel="icon" href="/images/favicon.ico">
+    <link rel="icon" href="/chamber/images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
