modal added to course homepage

--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
         </div>
         <p>&copy;<span id="currentyear"></span>🏰Emmanuel Odedina 🌍Lagos, Nigeria</p>
         <p id="lastModified"></p>
-    </footer>   
+    </footer>
+    <dialog id="course-details"></dialog>
 </body>
 </html>
