Project fulfilled bar video demonstration

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -51,6 +51,7 @@
             </div>
         </div>
     </header>
+
     <main class="discover-container">
         <section id="sidebar-message">
             <h2>Visitor Information</h2>
@@ -61,11 +62,9 @@
 
         <section id="gallery">
             <h1>Discover Lagos Businesses</h1>
-            <div id="card-grid">
-            </div>
+            <div id="card-grid"></div>
         </section>
     </main>
-
 
     <footer>
         <div class="footer-container">
@@ -74,13 +73,14 @@
             </div>
 
             <div class="footer-center">
-                <a href="https://www.youtube.com/@BYUPathwayWorldwideOfficial" target="_blank">
+                <a href="https://www.youtube.com/@BYUPathwayWorldwideOfficial" target="_blank"
+                    rel="noopener noreferrer">
                     <img src="images/youtube.svg" alt="YouTube" width="32" height="32">
                 </a>
-                <a href="https://www.linkedin.com/school/byupathway/" target="_blank">
+                <a href="https://www.linkedin.com/school/byupathway/" target="_blank" rel="noopener noreferrer">
                     <img src="images/linkedin.svg" alt="LinkedIn" width="32" height="32">
                 </a>
-                <a href="https://x.com/BYUPathwayWorld" target="_blank">
+                <a href="https://x.com/BYUPathwayWorld" target="_blank" rel="noopener noreferrer">
                     <img src="images/twitter-x.svg" alt="Twitter-x" width="32" height="32">
                 </a>
             </div>
@@ -92,7 +92,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
