--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -16,37 +15,30 @@
 
     <title>RazerBud — Dashboard</title>
 
-
     <link rel="icon" href="favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Open+Sans:wght@300;400;600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/main.css">
 </head>
 
-
 <body>
 
-
-    <!-- HEADER (use same structure on all pages; set .active on the current link) -->
     <header>
         <div class="header-container">
             <a href="index.html" class="logo">RazerBud</a>
 
-
             <div class="nav-actions">
                 <button id="menu-toggle" aria-label="Toggle Navigation" aria-expanded="false">☰</button>
-
 
                 <nav id="nav" aria-label="Main navigation">
                     <a href="index.html" class="active">Dashboard</a>
                     <a href="history.html">History</a>
                     <a href="attributions.html">Attributions</a>
                 </nav>
-
 
                 <button id="theme-toggle" aria-label="Toggle Light/Dark Mode">
                     <span class="icon">🌙</span>
@@ -55,16 +47,11 @@
         </div>
     </header>
 
-
-    <!-- MAIN DASHBOARD -->
     <main class="dashboard-grid" id="dashboard-grid">
-
-
-        <!-- Current Balance & Budget -->
+        <h1>Finance Tracker Dashboard</h1>
         <section class="card" aria-labelledby="balance-heading">
             <h2 id="balance-heading">Current Balance</h2>
             <p id="current-balance" class="large-number" aria-live="polite">$0.00</p>
-
 
             <div class="budget-block">
                 <label for="budget-input">Monthly Budget</label>
@@ -73,42 +60,33 @@
                     <button id="save-budget">Save</button>
                 </div>
 
-
                 <div class="budget-progress" role="progressbar" aria-label="Budget usage" aria-valuemin="0"
                     aria-valuemax="100" aria-valuenow="0">
                     <div id="budget-bar" class="budget-bar"></div>
                 </div>
 
-
                 <p id="budget-text" class="muted">No budget set</p>
             </div>
         </section>
 
-
-        <!-- Add Income -->
         <section class="card" aria-labelledby="income-heading">
             <h2 id="income-heading">Add Income</h2>
             <form id="income-form" novalidate>
                 <label for="income-amount">Amount</label>
                 <input id="income-amount" name="income-amount" type="number" step="0.01" required>
 
-
                 <label for="income-description">Description</label>
                 <input id="income-description" name="income-description" type="text">
-
 
                 <button type="submit">Add Income</button>
             </form>
         </section>
 
-
-        <!-- Add Expense -->
         <section class="card" aria-labelledby="expense-heading">
             <h2 id="expense-heading">Add Expense</h2>
             <form id="expense-form" action="form-submission.html" method="get" novalidate>
                 <label for="expense-amount">Amount</label>
                 <input id="expense-amount" name="amount" type="number" step="0.01" required>
-
 
                 <label for="expense-category">Category</label>
                 <select id="expense-category" name="category" required>
@@ -120,14 +98,11 @@
                     <option value="Other">Other</option>
                 </select>
 
-
                 <label for="expense-date">Date</label>
                 <input id="expense-date" name="date" type="date" required>
 
-
                 <label for="expense-description">Description</label>
                 <textarea id="expense-description" name="description" rows="2"></textarea>
-
 
                 <div class="expense-actions">
                     <button type="submit">Add Expense</button>
@@ -136,47 +111,34 @@
             </form>
         </section>
 
-
-        <!-- Category totals & insights -->
         <section class="card" aria-labelledby="insights-heading">
             <h2 id="insights-heading">Spending Insights</h2>
             <div id="top-category" class="insight-row" aria-live="polite"></div>
             <div id="category-totals" class="category-list" aria-live="polite"></div>
         </section>
 
-
-        <!-- Pie chart -->
         <section class="card" aria-labelledby="pie-heading">
             <h2 id="pie-heading">Category Breakdown</h2>
             <canvas id="spending-pie" width="300" height="300" aria-label="Spending category pie chart"></canvas>
         </section>
 
-
-        <!-- Line chart -->
         <section class="card" aria-labelledby="line-heading">
             <h2 id="line-heading">Spending Over Time</h2>
             <canvas id="spending-line" width="600" height="200" aria-label="Spending over time line chart"></canvas>
         </section>
 
-
-        <!-- Recent expenses -->
         <section class="card" aria-labelledby="recent-heading">
             <h2 id="recent-heading">Recent Expenses</h2>
             <ul id="expenses-list" class="expenses-list" aria-live="polite"></ul>
         </section>
 
-
-        <!-- Live financial data (API) -->
         <section class="card" aria-labelledby="api-heading">
             <h2 id="api-heading">Live Financial Data</h2>
             <div id="api-data-display" class="api-data">Loading...</div>
         </section>
 
-
     </main>
 
-
-    <!-- Modal: Expense details -->
     <div id="modal-backdrop" class="modal-backdrop" aria-hidden="true" role="dialog" aria-modal="true">
         <div class="modal-content" role="document">
             <button class="modal-close" aria-label="Close dialog">&times;</button>
@@ -185,8 +147,6 @@
         </div>
     </div>
 
-
-    <!-- FOOTER -->
     <footer>
         <div class="socials">
             <a href="https://github.com/Emmanuel-Adewunmi" target="_blank" rel="noopener">
@@ -205,10 +165,7 @@
         <p id="lastModified" class="muted"></p>
     </footer>
 
-
-    <!-- Main script (module) -->
     <script type="module" src="scripts/main.js"></script>
 </body>
-
 
 </html>
