--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -15,7 +15,7 @@
 
     <title>RazerBud — Dashboard</title>
 
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="../images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
