All Project requirement fulfilled

--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -160,7 +160,7 @@
             </a>
         </div>
         <p>&copy;<span id="currentyear"></span> RazerBud — Emmanuel Odedina</p>
-        <p><a href="attributions.html">Attributions</a> | <a href="https://youtu.be/REPLACE_WITH_VIDEO"
+        <p><a href="attributions.html">Attributions</a> | <a href="https://www.loom.com/share/a1f3071b2a7a4e449f97925e29eaa3bc?sid=b83564bb-97f1-44a7-8f11-9df75428c101"
                 target="_blank">Project Video</a></p>
         <p id="lastModified" class="muted"></p>
     </footer>
